# ndarray-stats

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  latest-deps.yml
benches/: deviation.rs  quantile.rs  sort.rs  summary_statistics.rs
src/: correlation.rs  deviation.rs  entropy.rs  errors.rs  histogram.rs  lib.rs  min_max.rs  percentile.rs  quantile.rs  sort.rs
src/histogram/: bincontent.rs  binnedstatistic.rs  binnedstatistic3.rs  binnedstatistic_Option.rs  bins.rs  builders.rs  errors.rs  grid.rs  histograms.rs  mod.rs  strategies.rs
src/histogram/bins/: mod.rs  n_dim.rs  one_dim.rs
src/kernel_weights/: mod.rs
src/maybe_nan/: impl_not_none.rs  mod.rs
src/quantile/: interpolate.rs  mod.rs
src/summary_statistics/: means.rs  mod.rs
tests/: deviation.rs  kernel_weights.rs  maybe_nan.rs  percentile.rs  quantile.rs  sort.rs  summary_statistics.rs
