[package]
name = "ndarray-stats"
version = "0.5.1"
authors = ["Jim Turner <ndarray-stats@turner.link>", "LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ndarray/ndarray-stats"
documentation = "https://docs.rs/ndarray-stats/"
readme = "README.md"

description = "Statistical routines for ArrayBase, the n-dimensional array data structure provided by ndarray."

keywords = ["array", "multidimensional", "statistics", "matrix", "ndarray"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = "0.15.0"
noisy_float = "0.2.0"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8.3"
itertools = { version = "0.10.0", default-features = false }
indexmap = ">=1"

[dev-dependencies]
ndarray = { version = "0.15.0", features = ["approx"] }
criterion = "0.3"
quickcheck = { version = "0.9.2", default-features = false }
ndarray-rand = "0.14.0"
approx = "0.4"
quickcheck_macros = "1.0.0"
num-bigint = "0.4.0"

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "summary_statistics"
harness = false

[[bench]]
name = "deviation"
harness = false
